<resources>
    <string name="app_name">SIMPAKAT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Work Programs</string>
    <string name="title_dashboard">Submissions</string>
    <string name="title_employee">Employees</string>
    <string name="title_kegiatan">Activities</string>
    <string name="title_laporan">Reports</string>
    <string name="title_coa">Data COA</string>
    <string name="title_unitkerja">Unit Kerja</string>
    <string name="title_notifications">Settings</string>
    <string name="title_list_submission">List Submissions</string>
    <string name="loading">Loading</string>

    <!-- Login -->
    <string name="nip_required">NIP required</string>
    <string name="email_address_required">Email address required</string>
    <string name="password_required">Password required</string>
    <string name="password_incorrect">Your Password mismatch</string>
    <string name="info">Info</string>
    <string name="incorrect_email_address">Incorrect email address</string>
    <string name="incorrect_nip">Incorrect NIP</string>

    <string name="by_registering_i_agree">By registering I agree to the</string>
    <string name="term_and_condition">Term &amp; Condition</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Register -->
    <string name="name_required">Name required</string>
    <string name="jabatan_required">Please choose your role</string>
    <string name="unit_kerja_required">Please choose your unit kerja</string>
    <string name="password_and_confirm_password_not_same">Password and confirm password not same</string>

    <!-- Program Kerja -->
    <string name="proker_name_required">Program kerja name required</string>
    <string name="unitkerja_required">Please choose your work program</string>
    <string name="coa_required">Please choose your account COA</string>
    <string name="jenis_pembiayaan_required">Please choose your jenis pembiayaan</string>
    <string name="bulan_kegiatan_required">Please choose your bulan kegiatan</string>
    <string name="biaya_required">Cost required</string>

    <!-- Pengajuan Proker -->
    <string name="biaya_terpakai_required">Cost used required</string>
    <string name="biaya_diajukan_required">Cost filed required</string>
    <string name="biaya_sisa_required">Remaining costs required</string>
    <string name="dibayarkan_kepada_required">Paid to required</string>
    <string name="nomer_rekening_required">Account number required</string>
    <string name="tanggal_pengajuan_required">date of filing required</string>

    <!--- COA -->
    <string name="kode_parent_required">Parent code required</string>
    <string name="kode_account_required">Account code required</string>
    <string name="name_account_required">Name account required</string>

    <!--- Kegiatan -->
    <string name="nama_kegiatan_required">Activity nama required</string>
    <string name="nominal_anggaran_kegiatan_required">Cost of activity required</string>
    <string name="tanggal_kegiatan_required">Date of activity required</string>

    <!--- Bukti Barang -->
    <string name="nama_barang_required">Tools name required</string>
    <string name="nominal_barang_required">Cost of tools required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
