<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_proker_menu"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_pengajuan_menu"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_kegiatan"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/title_kegiatan" />

<!--    <item-->
<!--        android:id="@+id/navigation_laporan"-->
<!--        android:icon="@drawable/ic_content_paste_black_24dp"-->
<!--        android:title="@string/title_kegiatan" />-->

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/title_notifications" />

</menu>
