<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nurul.simpakat.view.dekan.proker.ProgramKerjaDekanFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_program_kerja" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.nurul.simpakat.view.dekan.pengajuan.PengajuanProkerDekanFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_pengajuan_proker" />

    <fragment
        android:id="@+id/navigation_kegiatan"
        android:name="com.nurul.simpakat.view.home.ui.kegiatan.KegiatanFragment"
        android:label="@string/title_kegiatan"
        tools:layout="@layout/fragment_kegiatan" />

    <fragment
        android:id="@+id/navigation_list_pengajuan"
        android:name="com.nurul.simpakat.view.dekan.listpengajuan.ListPengajuanFragment"
        android:label="@string/title_list_submission"
        tools:layout="@layout/fragment_list_pengajuan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.nurul.simpakat.view.dekan.pengaturan.PengaturanDekanFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_pengaturan_dekan" />
</navigation>