<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nurul.simpakat.view.keuangan.listpengajuan.ListPengajuanKeuanganFragment"
        android:label="@string/title_list_submission"
        tools:layout="@layout/fragment_list_pengajuan_keuangan" />

    <fragment
        android:id="@+id/navigation_coa"
        android:name="com.nurul.simpakat.view.keuangan.coa.DataCOAFragment"
        android:label="@string/title_coa"
        tools:layout="@layout/fragment_data_coa" />

    <fragment
        android:id="@+id/navigation_list_unit_kerja"
        android:name="com.nurul.simpakat.view.warek.jurusan.UnitKerjaFragment"
        android:label="@string/title_unitkerja"
        tools:layout="@layout/fragment_unit_kerja" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nurul.simpakat.view.keuangan.settings.PengaturanKeuanganFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_pengaturan_keuangan" />
</navigation>