<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAdd"
    android:orientation="vertical"
    tools:context=".view.login.signup.SignupUserFragment">

    <LinearLayout
        android:id="@+id/layout_data_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/image_simpakat"
            android:layout_width="110dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/logo_simpakat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="NIP"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_nip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="text|textEmailAddress"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Confirm Password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/edit_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@drawable/background_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Jabatan"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_unit_kerja"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="Unit Kerja"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_unit_kerja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_unit_kerja"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:text="@string/by_registering_i_agree"
            android:textColor="@color/text_color_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_term_and_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:text="@string/term_and_condition"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:text="and"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/text_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Back to"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Login"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>